# GRPC_Section

./: .gitignore  .gitmodules  CMakeLists.txt  go.mod
grpc-benchmark/: go.mod  main.go  run-exportproject.sh  run-test.sh
grpc-benchmark/proto/: plcruntime.proto
grpc-benchmark/reports/: CreateProject_20250405-095826.json  CreateProject_20250405-095900.json  CreateProject_20250407-074814.json  CreateProject_20250407-074815.json  ExportLogs_20250405-095826.json  ExportLogs_20250405-095900.json  ExportLogs_20250407-074812.json  ExportLogs_20250407-074813.json  ExportProject_20250405-095826.json  ExportProject_20250405-095900.json  ExportProject_20250407-074817.json  ImportProgram_20250405-095900.json  ImportProgram_20250407-074816.json
grpc-benchmark/reports-cli/: CreateProject_1_20250405_133128.html  CreateProject_1_20250407_205342.html  CreateProject_1_20250407_205723.html  CreateProject_1_20250407_210243.html  CreateProject_1_20250407_213348.html  CreateProject_1_20250408_165810.html  CreateProject_2_20250405_133128.html  CreateProject_2_20250407_205342.html  CreateProject_2_20250407_205723.html  CreateProject_2_20250407_210243.html  CreateProject_2_20250407_213349.html  CreateProject_2_20250408_165810.html  ExportLogs_1_20250405_133129.html  ExportLogs_1_20250407_205342.html  ExportLogs_1_20250407_205723.html  ExportLogs_1_20250407_210243.html  ExportLogs_1_20250407_213352.html  ExportLogs_1_20250408_165810.html  ExportLogs_2_20250405_133129.html  ExportLogs_2_20250407_205343.html  ExportLogs_2_20250407_205724.html  ExportLogs_2_20250407_210244.html  ExportLogs_2_20250407_213353.html  ExportLogs_2_20250408_165810.html  ExportProject_1_20250405_133128.html  ExportProject_1_20250407_205341.html  ExportProject_1_20250407_205723.html  ExportProject_1_20250407_210243.html  ExportProject_1_20250407_213346.html  ExportProject_1_20250408_090449.html  ExportProject_1_20250408_165809.html  ImportProgram_1_20250405_133129.html  ImportProgram_1_20250407_205342.html  ImportProgram_1_20250407_205723.html  ImportProgram_1_20250407_210243.html  ImportProgram_1_20250407_213351.html  ImportProgram_1_20250408_165810.html
grpc-benchmark/testdata/create-project/: 1.json  2.json
grpc-benchmark/testdata/export-project/: 1.json
grpc-benchmark/testdata/exportlogs/: 1.json  2.json
grpc-benchmark/testdata/importprogram/: 1.json
grpc-benchmark/testdata/st-demos/: motor_control.st
plc_ide/: go.mod  plc_ide.pb.go  plc_ide.proto  plc_ide_grpc.pb.go  plc_ide_pb2.py  plc_ide_pb2.pyi  plc_ide_pb2_grpc.py
plc_ide_client/: main.go
plc_ide_nrt/: CMakeLists.txt  compile_output.txt  message_format.md  plc_ide_nrt.proto  plc_ide_nrt_v1.grpc.pb.cc  plc_ide_nrt_v1.grpc.pb.h  plc_ide_nrt_v1.pb.cc  plc_ide_nrt_v1.pb.h  plc_ide_nrt_v1.proto  plc_runtime_grpc_server.cc  plc_runtime_grpc_server.h  test_grpc_client.cc  test_grpc_server.c
plc_ide_server/: main.py
rpcclient/v1/: go.mod  main.go  test_cli.sh
rpcclient/v1/client/: client.go
rpcclient/v1/cmd/: create_project.go  export_logs.go  export_project.go  import_program.go  root.go
rpcclient/v1/demo/: demo.st
rpcserver/v1/: go.mod  main.go
